--- a/archetypes/web-selenium-groovy-pico-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/archetypes/web-selenium-groovy-pico-archetype/src/main/resources/archetype-resources/pom.xml
@@ -2,18 +2,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>${groupId}</groupId>
-  <artifactId>${artifactId}</artifactId>
   <version>${version}</version>
+  <artifactId>${artifactId}</artifactId>
   <name>Etsy.com Stories with Groovy and Pico</name>
   <description>JBehave stories verifying functionality of Etsy.com using Groovy and Pico</description>
 
   <properties>
-    <jbehave.core.version>$jbehaveCoreVersion</jbehave.core.version>
-    <jbehave.web.version>$jbehaveWebVersion</jbehave.web.version>
-    <jbehave.site.version>$jbehaveSiteVersion</jbehave.site.version>
+    <jbehave.core.version>3.7-SNAPSHOT</jbehave.core.version>
+    <jbehave.web.version>3.6-SNAPSHOT</jbehave.web.version>
+    <jbehave.site.version>3.1.1</jbehave.site.version>
+    <fluent.selenium.version>1.5.1</fluent.selenium.version>
     <selenium.version>2.20.0</selenium.version>
     <gmaven.version>1.3</gmaven.version>
     <groovy.version>1.8.6</groovy.version>
+    <ignore.failures>true</ignore.failures>
+    <threads>1</threads>
+    <storyTimeoutInSecs>250</storyTimeoutInSecs>
+    <skip>false</skip>
+    <stories>**/EtsyDotComStories.java</stories>
   </properties>
 
   <dependencies>
@@ -44,7 +50,7 @@
     <dependency>
       <groupId>org.seleniumhq.selenium.fluent</groupId>
       <artifactId>fluent-selenium</artifactId>
-      <version>1.5.1</version>
+      <version>${fluent.selenium.version}</version>
       <optional>true</optional>
       <exclusions>
         <exclusion>
@@ -59,6 +65,22 @@
       <version>${selenium.version}</version>
     </dependency>
     <dependency>
+      <groupId>com.github.tanob</groupId>
+      <artifactId>groobe</artifactId>
+      <version>1.1</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.hamcrest</groupId>
+          <artifactId>hamcrest-all</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.picocontainer</groupId>
+      <artifactId>picocontainer</artifactId>
+      <version>2.14.1</version>
+    </dependency>
+    <dependency>
       <groupId>org.jbehave</groupId>
       <artifactId>jbehave-pico</artifactId>
       <version>${jbehave.core.version}</version>
@@ -70,24 +92,14 @@
       </exclusions>
     </dependency>
     <dependency>
-      <groupId>org.picocontainer</groupId>
-      <artifactId>picocontainer</artifactId>
-      <version>2.14.1</version>
-    </dependency>
-    <dependency>
       <groupId>org.codehaus.groovy</groupId>
       <artifactId>groovy-all</artifactId>
       <version>${groovy.version}</version>
     </dependency>
     <dependency>
-      <groupId>com.github.tanob</groupId>
-      <artifactId>groobe</artifactId>
-      <version>1.2</version>
-    </dependency>
-    <dependency>
       <groupId>org.codehaus.geb</groupId>
       <artifactId>geb-core</artifactId>
-      <version>0.7.0</version>
+      <version>0.6.1</version>
     </dependency>
   </dependencies>
 
@@ -144,6 +156,33 @@
           <configuration>
             <lifecycleMappingMetadata>
               <pluginExecutions>
+                <pluginExecution>
+                  <pluginExecutionFilter>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <versionRange>[2.1,)</versionRange>
+                    <goals>
+                      <goal>copy</goal>
+                      <goal>unpack</goal>
+                    </goals>
+                  </pluginExecutionFilter>
+                  <action>
+                    <ignore></ignore>
+                  </action>
+                </pluginExecution>
+                <pluginExecution>
+                  <pluginExecutionFilter>
+                    <groupId>org.jbehave</groupId>
+                    <artifactId>jbehave-maven-plugin</artifactId>
+                    <versionRange>[${jbehave.core.version},)</versionRange>
+                    <goals>
+                      <goal>unpack-view-resources</goal>
+                    </goals>
+                  </pluginExecutionFilter>
+                  <action>
+                    <ignore></ignore>
+                  </action>
+                </pluginExecution>
                 <pluginExecution>
                   <pluginExecutionFilter>
                     <groupId>org.codehaus.gmaven</groupId>
@@ -237,6 +276,13 @@
         <groupId>org.jbehave</groupId>
         <artifactId>jbehave-maven-plugin</artifactId>
         <version>${jbehave.core.version}</version>
+        <dependencies>
+          <dependency>
+            <groupId>com.thoughtworks.xstream</groupId>
+            <artifactId>xstream</artifactId>
+            <version>1.3.1</version>
+          </dependency>
+        </dependencies>
         <executions>
           <execution>
             <id>unpack-view-resources</id>
@@ -250,19 +296,48 @@
             <phase>integration-test</phase>
             <configuration>
               <includes>
-                <include>**/*Stories*</include>
+                <include>${stories}</include>
               </includes>
               <excludes />
-              <generateViewAfterStories>true</generateViewAfterStories>
-              <ignoreFailureInStories>true</ignoreFailureInStories>
-              <ignoreFailureInView>true</ignoreFailureInView>
+              <ignoreFailureInStories>${ignore.failures}</ignoreFailureInStories>
+              <ignoreFailureInView>${ignore.failures}</ignoreFailureInView>
+              <threads>${threads}</threads>
+              <skip>${skip}</skip>
+              <storyTimeoutInSecs>${storyTimeoutInSecs}</storyTimeoutInSecs>
               <metaFilters>
-                <metaFilter></metaFilter>
+                <metaFilter>${meta.filter}</metaFilter>
               </metaFilters>
-              <verboseFailures>true</verboseFailures>
             </configuration>
             <goals>
               <goal>run-stories-as-embeddables</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>map-stories</id>
+            <phase>integration-test</phase>
+            <configuration>
+              <includes>
+                <include>**/*StoryMaps.java</include>
+              </includes>
+              <metaFilters>
+                <metaFilter>+category *</metaFilter>
+                <metaFilter>+color *</metaFilter>
+              </metaFilters>
+            </configuration>
+            <goals>
+              <goal>map-stories-as-embeddables</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>report-stepdocs</id>
+            <phase>integration-test</phase>
+            <configuration>
+              <includes>
+                <include>${stories}</include>
+              </includes>
+            </configuration>
+            <goals>
+              <goal>report-stepdocs-as-embeddables</goal>
             </goals>
           </execution>
         </executions>
@@ -283,5 +358,32 @@
       </plugin>
     </plugins>
   </build>
+
+  <profiles>
+    <profile>
+      <id>stable</id>
+      <properties>
+        <jbehave.core.version>3.6.1</jbehave.core.version>
+        <jbehave.web.version>3.5.1</jbehave.web.version>
+      </properties>
+    </profile>
+    <profile>
+      <id>saucelabs</id>
+      <activation>
+        <property>
+          <name>SAUCE_USERNAME</name>
+        </property>
+      </activation>
+      <properties>
+        <threads>5</threads>
+      </properties>
+    </profile>
+    <profile>
+      <id>fail-fast</id>
+      <properties>
+        <ignore.failures>false</ignore.failures>
+      </properties>
+    </profile>
+  </profiles>
 
 </project>
