--- a/archetypes/web-selenium-java-spring-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/archetypes/web-selenium-java-spring-archetype/src/main/resources/archetype-resources/pom.xml
@@ -8,10 +8,15 @@
   <description>JBehave stories verifying functionality of Etsy.com using Java and Spring</description>
 
   <properties>
-    <jbehave.core.version>$jbehaveCoreVersion</jbehave.core.version>
-    <jbehave.web.version>$jbehaveWebVersion</jbehave.web.version>
-    <jbehave.site.version>$jbehaveSiteVersion</jbehave.site.version>
+    <jbehave.core.version>3.7-SNAPSHOT</jbehave.core.version>
+    <jbehave.web.version>3.6-SNAPSHOT</jbehave.web.version>
+    <jbehave.site.version>3.1.1</jbehave.site.version>
+    <fluent.selenium.version>1.5.1</fluent.selenium.version>
     <selenium.version>2.20.0</selenium.version>
+    <ignore.failures>true</ignore.failures>
+    <threads>1</threads>
+    <skip>false</skip>
+    <stories>**/EtsyDotComStories.java</stories>
   </properties>
 
   <dependencyManagement>
@@ -23,6 +28,7 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
+  
   <dependencies>
     <dependency>
       <groupId>org.jbehave</groupId>
@@ -51,7 +57,7 @@
     <dependency>
       <groupId>org.seleniumhq.selenium.fluent</groupId>
       <artifactId>fluent-selenium</artifactId>
-      <version>1.5.1</version>
+      <version>${fluent.selenium.version}</version>
       <optional>true</optional>
       <exclusions>
         <exclusion>
@@ -61,9 +67,31 @@
       </exclusions>
     </dependency>
     <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit-dep</artifactId>
+      <version>4.8.2</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.hamcrest</groupId>
+          <artifactId>hamcrest-core</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest-all</artifactId>
+      <version>1.1</version>
+    </dependency>
+    <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-java</artifactId>
       <version>${selenium.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.hamcrest</groupId>
+          <artifactId>hamcrest-core</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.jbehave</groupId>
@@ -73,6 +101,7 @@
   </dependencies>
 
   <build>
+
     <pluginManagement>
       <plugins>
         <plugin>
@@ -82,6 +111,47 @@
           <configuration>
             <source>1.5</source>
             <target>1.5</target>
+          </configuration>
+        </plugin>
+
+        <!--This plugin's configuration is used to store Eclipse m2e settings 
+          only. It has no influence on the Maven build itself. -->
+        <plugin>
+          <groupId>org.eclipse.m2e</groupId>
+          <artifactId>lifecycle-mapping</artifactId>
+          <version>1.0.0</version>
+          <configuration>
+            <lifecycleMappingMetadata>
+              <pluginExecutions>
+                <pluginExecution>
+                  <pluginExecutionFilter>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <versionRange>[2.1,)</versionRange>
+                    <goals>
+                      <goal>copy</goal>
+                      <goal>unpack</goal>
+                    </goals>
+                  </pluginExecutionFilter>
+                  <action>
+                    <ignore></ignore>
+                  </action>
+                </pluginExecution>
+                <pluginExecution>
+                  <pluginExecutionFilter>
+                    <groupId>org.jbehave</groupId>
+                    <artifactId>jbehave-maven-plugin</artifactId>
+                    <versionRange>[${jbehave.core.version},)</versionRange>
+                    <goals>
+                      <goal>unpack-view-resources</goal>
+                    </goals>
+                  </pluginExecutionFilter>
+                  <action>
+                    <ignore></ignore>
+                  </action>
+                </pluginExecution>
+              </pluginExecutions>
+            </lifecycleMappingMetadata>
           </configuration>
         </plugin>
       </plugins>
@@ -113,22 +183,111 @@
             <phase>integration-test</phase>
             <configuration>
               <includes>
-                <include>**/*Stories*</include>
+                <include>${stories}</include>
               </includes>
               <excludes />
-              <generateViewAfterStories>true</generateViewAfterStories>
-              <ignoreFailureInStories>true</ignoreFailureInStories>
-              <ignoreFailureInView>true</ignoreFailureInView>
+              <ignoreFailureInStories>${ignore.failures}</ignoreFailureInStories>
+              <ignoreFailureInView>${ignore.failures}</ignoreFailureInView>
+              <threads>${threads}</threads>
+              <skip>${skip}</skip>
               <metaFilters>
                 <metaFilter>${meta.filter}</metaFilter>
               </metaFilters>
+              <executorsClass>org.jbehave.core.embedder.executors.SameThreadExecutors</executorsClass>
             </configuration>
             <goals>
               <goal>run-stories-as-embeddables</goal>
             </goals>
           </execution>
+          <execution>
+            <id>map-stories</id>
+            <phase>integration-test</phase>
+            <configuration>
+              <includes>
+                <include>**/*StoryMaps.java</include>
+              </includes>
+              <metaFilters>
+                <metaFilter>+category *</metaFilter>
+                <metaFilter>+color *</metaFilter>
+              </metaFilters>
+            </configuration>
+            <goals>
+              <goal>map-stories-as-embeddables</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>report-stepdocs</id>
+            <phase>integration-test</phase>
+            <configuration>
+              <includes>
+                <include>${stories}</include>
+              </includes>
+            </configuration>
+            <goals>
+              <goal>report-stepdocs-as-embeddables</goal>
+            </goals>
+          </execution>
         </executions>
+        <dependencies>
+          <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>11.0.1</version>
+          </dependency>
+        </dependencies>
       </plugin>
     </plugins>
   </build>
+  <profiles>
+    <profile>
+      <id>stable</id>
+      <properties>
+        <jbehave.core.version>3.6.1</jbehave.core.version>
+        <jbehave.web.version>3.5.1</jbehave.web.version>
+      </properties>
+    </profile>
+    <profile>
+      <id>annotated-embedder</id>
+      <properties>
+        <stories>**/AnnotatedEtsyDotComStories.java</stories>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.jbehave</groupId>
+            <artifactId>jbehave-maven-plugin</artifactId>
+            <version>${jbehave.core.version}</version>
+            <executions>
+              <execution>
+                <id>unpack-view-resources</id>
+                <phase>process-resources</phase>
+                <goals>
+                  <goal>unpack-view-resources</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>embeddable-stories</id>
+                <phase>integration-test</phase>
+                <configuration>
+                  <includes>
+                    <include>${stories}</include>
+                  </includes>
+                  <excludes />
+                </configuration>
+                <goals>
+                  <goal>run-stories-with-annotated-embedder</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>fail-fast</id>
+      <properties>
+        <ignore.failures>false</ignore.failures>
+      </properties>
+    </profile>
+  </profiles>
 </project>
