--- a/web-selenium/pom.xml
+++ b/web-selenium/pom.xml
@@ -12,7 +12,7 @@
 
   <properties>
     <selenium.version>2.37.0</selenium.version>
-    <groovy.version>1.8.6</groovy.version>
+    <groovy.version>1.8.7</groovy.version>
   </properties>
 
   <dependencies>
@@ -36,7 +36,7 @@
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
-      <version>11.0.1</version>
+      <version>15.0</version>
       <optional>true</optional>
     </dependency>
     <dependency>
@@ -52,21 +52,21 @@
       <optional>true</optional>
     </dependency>
     <dependency>
-      <groupId>org.codehaus.geb</groupId>
+      <groupId>org.gebish</groupId>
       <artifactId>geb-core</artifactId>
-      <version>0.7.0</version>
+      <version>0.9.1</version>
       <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>org.freemarker</groupId>
       <artifactId>freemarker</artifactId>
-      <version>2.3.19</version>
+      <version>2.3.20</version>
       <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>org.picocontainer</groupId>
       <artifactId>picocontainer</artifactId>
-      <version>2.14.1</version>
+      <version>2.14.3</version>
       <optional>true</optional>
     </dependency>
     <dependency>
