--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   </parent>
   <groupId>org.jbehave.web</groupId>
   <artifactId>jbehave-web</artifactId>
-  <version>3.6-SNAPSHOT</version>
+  <version>4.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>JBehave Web</name>
   <description>JBehave Web provides a web integration layer for Behaviour-Driven Development</description>
@@ -22,7 +22,7 @@
   </modules>
 
   <properties>
-    <jbehave.core.version>3.9.1</jbehave.core.version>
+    <jbehave.core.version>4.0-SNAPSHOT</jbehave.core.version>
     <jbehave.site.version>3.1.1</jbehave.site.version>
     <jbehave.webapp.name>jbehave-web-runner</jbehave.webapp.name>
     <jdk.version>1.5</jdk.version>
